--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,6 @@
-MONGO_URI=mongodb+srv://lathulathurzan:QTBxgGTyLd09yJ7@hnv.bgpji1c.mongodb.net/?retryWrites=true&w=majority&appName=HNV
+# Replace these credentials with your actual MongoDB Atlas credentials
+# MONGO_URI=mongodb+srv://<username>:<password>@hnv.bgpji1c.mongodb.net/HNV?retryWrites=true&w=majority&appName=HNV
+MONGO_URI=mongodb+srv://HNV:HNV01722abc@hnv.bgpji1c.mongodb.net/HNV?retryWrites=true&w=majority&appName=HNV
 PORT=5000
 GOOGLE_CLIENT_ID=YOUR_GOOGLE_CLIENT_ID
 ADMIN_EMAIL=admin@example.com
